--- a/ios/Bacon/GoogleService-Info.plist
+++ b/ios/Bacon/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>853409872698-oibc9lkaifadh910kt8gtetdt507lk50.apps.googleusercontent.com</string>
+	<string>371060154058-hhtdj22vv5bg1h6d831d37pp7gjr1ejq.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.853409872698-oibc9lkaifadh910kt8gtetdt507lk50</string>
+	<string>com.googleusercontent.apps.371060154058-hhtdj22vv5bg1h6d831d37pp7gjr1ejq</string>
 	<key>API_KEY</key>
-	<string>AIzaSyB1JH2IootIlCp6gOeu4sHqrj7WgMR4nPg</string>
+	<string>AIzaSyD2OpffOMMd2Q6R08149stRAA-LZ1Pfp9E</string>
 	<key>GCM_SENDER_ID</key>
-	<string>853409872698</string>
+	<string>371060154058</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.kaying.ios.bacon</string>
+	<string>com.kayming.ios.bacon</string>
 	<key>PROJECT_ID</key>
-	<string>bacon-dev-tsao</string>
+	<string>bacon-tsao</string>
 	<key>STORAGE_BUCKET</key>
-	<string>bacon-dev-tsao.appspot.com</string>
+	<string>bacon-tsao.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:853409872698:ios:02fc2cec34ec543e</string>
+	<string>1:371060154058:ios:6b323357a5cff2bc</string>
 	<key>DATABASE_URL</key>
-	<string>https://bacon-dev-tsao.firebaseio.com</string>
+	<string>https://bacon-tsao.firebaseio.com</string>
 </dict>
 </plist>
