--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-datepicker": "^1.6.0",
     "react-native-drawer": "^2.3.0",
     "react-native-elements": "^0.15.0",
+    "react-native-fast-image": "~0.1.2",
     "react-native-firebase": "^2.0.4",
     "react-native-google-places": "^2.4.1",
     "react-native-image-pan-zoom": "^2.0.5",
@@ -46,10 +47,10 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-loader": "^1.8.0",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-babel": "^4.1.2"
+    "eslint-plugin-react": "^7.1.0"
   },
   "jest": {
     "preset": "react-native"
