--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-billing": "^2.3.1",
     "react-native-datepicker": "^1.6.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-dropdown-menu": "git+https://github.com/kaymingmobile/react-native-dropdown-menu.git",
     "react-native-elements": "^0.15.0",
     "react-native-fast-image": "1.0.0",
     "react-native-firebase": "^2.0.4",
@@ -37,6 +38,7 @@
     "react-native-linear-gradient": "^2.1.0",
     "react-native-looped-carousel": "kaymingmobile/react-native-looped-carousel#master",
     "react-native-mobx": "^0.3.1",
+    "react-native-modal": "^2.4.0",
     "react-native-pathjs-charts": "^0.0.30",
     "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
