--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,12 @@
     "babel"
   ],
   "rules": {
+    "arrow-parens": "off",
+    "quotes": "off",
+    "no-unused-vars": "off",
+    "react/jsx-filename-extension": "off",
+    "object-curly-spacing": "off",
+    "consistent-return": "off",
     "no-console": "off",
     "prop-types": "off",
     "import/no-commonjs": "off",
