--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "0.0.8",
+    "crypto-js": "^3.1.9-1",
     "geofire": "^4.1.2",
     "lodash": "^4.17.4",
+    "mkp-react-native-image-view": "kaymingmobile/react-native-image-view#master",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
     "moment": "^2.18.1",
@@ -31,6 +33,7 @@
     "react-native-exit-app": "kaymingmobile/react-native-exit-app#master",
     "react-native-fast-image": "1.0.0",
     "react-native-firebase": "^2.0.4",
+    "react-native-fs": "^2.5.1",
     "react-native-gifted-chat": "^0.2.5",
     "react-native-google-places": "kaymingmobile/react-native-google-places#patch-1",
     "react-native-image-pan-zoom": "^2.0.5",
@@ -44,7 +47,8 @@
     "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-svg": "^5.4.1",
-    "react-native-vector-icons": "^4.3.0"
+    "react-native-vector-icons": "^4.3.0",
+    "url-parse": "^1.1.9"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
