--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-pathjs-charts": "^0.0.30",
     "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-storage": "^0.2.2",
     "react-native-svg": "^5.4.1",
     "react-native-vector-icons": "^4.3.0",
     "url-parse": "^1.1.9"
