--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-storage": "^0.2.2",
     "react-native-svg": "^5.4.1",
     "react-native-vector-icons": "^4.3.0",
-    "url-parse": "^1.1.9"
+    "url-parse": "^1.1.9",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
