--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-react": "^7.1.0",
+    "react-devtools": "^2.5.0"
   },
   "jest": {
     "preset": "react-native"
