--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ptomasroos/react-native-multi-slider": "0.0.8",
     "crypto-js": "^3.1.9-1",
     "geofire": "^4.1.2",
+    "geolib": "^2.0.23",
     "lodash": "^4.17.4",
     "mkp-react-native-image-view": "kaymingmobile/react-native-image-view#master",
     "mobx": "^3.2.2",
