--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-looped-carousel": "kaymingmobile/react-native-looped-carousel#master",
     "react-native-mobx": "^0.3.1",
     "react-native-modal": "^2.4.0",
+    "react-native-orientation-locker": "^1.0.3",
     "react-native-pathjs-charts": "^0.0.30",
     "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
