--- a/ios/Bacon.xcodeproj/xcshareddata/xcschemes/Bacon.xcscheme
+++ b/ios/Bacon.xcodeproj/xcshareddata/xcschemes/Bacon.xcscheme
@@ -124,6 +124,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Bacon"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
