--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@ptomasroos/react-native-multi-slider": "0.0.8",
     "crypto-js": "^3.1.9-1",
     "geofire": "^4.1.2",
-    "iap-receipt-validator": "^1.0.6",
     "geolib": "^2.0.23",
+    "iap-receipt-validator": "^1.0.6",
     "lodash": "^4.17.4",
     "mkp-react-native-image-view": "kaymingmobile/react-native-image-view#master",
     "mobx": "^3.2.2",
@@ -52,6 +52,7 @@
     "react-native-pathjs-charts": "^0.0.30",
     "react-native-router-flux": "~3.41.0",
     "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-star-rating": "^1.0.8",
     "react-native-storage": "^0.2.2",
     "react-native-svg": "^5.4.1",
     "react-native-vector-icons": "^4.3.0",
