--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-native-elements": "^0.15.0",
     "react-native-exit-app": "kaymingmobile/react-native-exit-app#master",
     "react-native-extended-stylesheet": "^0.6.0",
-    "react-native-fast-image": "1.0.0",
+    "react-native-fast-image": "^1.0.0",
     "react-native-firebase": "^2.0.4",
     "react-native-fs": "^2.5.1",
     "react-native-gifted-chat": "^0.2.5",
