--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     ]
   },
   "dependencies": {
-    "react-native-multi-slider": "kaymingmobile/react-native-multi-slider#master",
     "geofire": "4.1.2",
     "geolib": "2.0.24",
     "iap-receipt-validator": "^1.0.6",
@@ -23,12 +22,12 @@
     "mobx-react": "4.3.3",
     "moment": "2.19.1",
     "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-native": "0.49.3",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.48.4",
     "react-native-animatable": "1.2.4",
     "react-native-billing": "2.4.0",
     "react-native-datepicker": "1.6.0",
-    "react-native-drawer": "2.5.0",
+    "react-native-drawer": "2.3.0",
     "react-native-dropdown-menu": "tsaohucn/react-native-dropdown-menu#bacon",
     "react-native-elements": "0.17.0",
     "react-native-exit-app": "1.0.0",
@@ -45,6 +44,7 @@
     "react-native-looped-carousel": "kaymingmobile/react-native-looped-carousel#master",
     "react-native-mobx": "0.3.1",
     "react-native-modal": "4.1.1",
+    "react-native-multi-slider": "kaymingmobile/react-native-multi-slider#master",
     "react-native-orientation-locker": "1.0.4",
     "react-native-router-flux": "kaymingmobile/react-native-router-flux#master",
     "react-native-scrollable-tab-view": "0.8.0",
@@ -54,16 +54,10 @@
     "react-native-vector-icons": "4.4.2"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-loader": "^1.8.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.1.0"
+    "babel-jest": "21.2.0",
+    "babel-preset-react-native": "4.0.0",
+    "jest": "21.2.1",
+    "react-test-renderer": "16.0.0-beta.5"
   },
   "jest": {
     "preset": "react-native"
