--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-project.xcworkspace
-*.xcodeproj
+#project.xcworkspace
+#*.xcodeproj
 main.jsbundle
 main.jsbundle.meta
 
