--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 # Xcode
 #
 build/
-Index/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -21,10 +20,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-#project.xcworkspace
-#*.xcodeproj
-main.jsbundle
-main.jsbundle.meta
+project.xcworkspace
 
 # Android/IntelliJ
 #
