--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-native-firebase": "3.0.5",
     "react-native-fs": "2.8.1",
     "react-native-gifted-chat": "tsaohucn/react-native-gifted-chat#master",
-    "react-native-google-places": "kaymingmobile/react-native-google-places#patch-1",
+    "react-native-google-places": "2.4.2",
     "react-native-image-pan-zoom": "2.0.7",
     "react-native-image-picker": "0.26.7",
     "react-native-image-resizer": "1.0.0",
