--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-google-places": "2.4.2",
     "react-native-image-pan-zoom": "2.0.7",
     "react-native-image-picker": "0.26.7",
+    "react-native-bacon-circle-image": "kaymingmobile/react-native-bacon-circle-image#master",
     "react-native-image-placeholder": "1.0.14",
     "react-native-image-resizer": "1.0.0",
     "react-native-in-app-utils": "^5.6.0",
