--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
     "react-native-animatable": "1.2.4",
+    "react-native-bacon-circle-image": "kaymingmobile/react-native-bacon-circle-image#master",
+    "react-native-bacon-square-image": "kaymingmobile/react-native-bacon-square-image#master",
     "react-native-billing": "2.4.0",
     "react-native-datepicker": "1.6.0",
     "react-native-deck-swiper": "1.4.3",
@@ -39,9 +41,7 @@
     "react-native-google-places": "2.4.2",
     "react-native-image-pan-zoom": "2.0.7",
     "react-native-image-picker": "0.26.7",
-    "react-native-bacon-circle-image": "kaymingmobile/react-native-bacon-circle-image#master",
-    "react-native-bacon-square-image": "kaymingmobile/react-native-bacon-square-image#master",
-    "react-native-image-placeholder": "1.0.14",
+    "react-native-image-placeholder": "^1.0.14",
     "react-native-image-resizer": "1.0.0",
     "react-native-in-app-utils": "^5.6.0",
     "react-native-linear-gradient": "2.3.0",
