--- a/package.json
+++ b/package.json
@@ -17,51 +17,50 @@
     "geofire": "4.1.2",
     "geolib": "2.0.24",
     "iap-receipt-validator": "^1.0.6",
-    "mkp-react-native-image-view": "kaymingmobile/react-native-image-view#master",
-    "mobx": "3.3.1",
-    "mobx-react": "4.3.3",
-    "moment": "2.19.1",
+    "mobx": "3.3.2",
+    "mobx-react": "4.3.5",
+    "moment": "2.19.3",
     "prop-types": "15.6.0",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
     "react-native-animatable": "1.2.4",
     "react-native-bacon-circle-image": "kaymingmobile/react-native-bacon-circle-image#master",
     "react-native-bacon-square-image": "kaymingmobile/react-native-bacon-square-image#master",
+    "react-native-bacon-circle-cache-image": "kaymingmobile/react-native-bacon-circle-cache-image#master",
     "react-native-billing": "2.4.0",
     "react-native-datepicker": "1.6.0",
-    "react-native-deck-swiper": "1.4.3",
+    "react-native-deck-swiper": "kaymingmobile/react-native-deck-swiper#master",
     "react-native-drawer": "2.3.0",
     "react-native-dropdown-menu": "tsaohucn/react-native-dropdown-menu#bacon",
     "react-native-elements": "0.17.0",
     "react-native-exit-app": "1.0.0",
-    "react-native-fast-image": "1.0.0",
-    "react-native-firebase": "3.0.5",
-    "react-native-fs": "2.8.1",
+    "react-native-fast-image": "2.0.1",
+    "react-native-firebase": "3.1.1",
+    "react-native-fs": "2.8.5",
     "react-native-gifted-chat": "tsaohucn/react-native-gifted-chat#master",
     "react-native-google-places": "2.4.2",
-    "react-native-image-pan-zoom": "2.0.7",
+    "react-native-image-pan-zoom": "2.0.8",
     "react-native-image-picker": "0.26.7",
-    "react-native-image-placeholder": "^1.0.14",
     "react-native-image-resizer": "1.0.0",
-    "react-native-in-app-utils": "^5.6.0",
+    "react-native-in-app-utils": "6.0.0",
     "react-native-linear-gradient": "2.3.0",
     "react-native-looped-carousel": "kaymingmobile/react-native-looped-carousel#master",
     "react-native-mobx": "0.3.1",
     "react-native-modal": "4.1.1",
     "react-native-multi-slider": "kaymingmobile/react-native-multi-slider#master",
-    "react-native-orientation-locker": "1.0.4",
+    "react-native-orientation-locker": "1.0.7",
     "react-native-router-flux": "kaymingmobile/react-native-router-flux#master",
     "react-native-scrollable-tab-view": "0.8.0",
     "react-native-star-rating": "1.0.8",
     "react-native-storage": "0.2.2",
-    "react-native-svg": "5.4.2",
+    "react-native-svg": "6.0.0",
     "react-native-vector-icons": "4.4.2"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0-beta.5"
+    "react-test-renderer": "16.2.0"
   },
   "jest": {
     "preset": "react-native"
