--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "mobx-react": "4.3.5",
     "moment": "2.19.4",
     "prop-types": "15.6.0",
-    "react": "16.2.0",
-    "react-native": "0.49.3",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.48.4",
     "react-native-animatable": "1.2.4",
     "react-native-bacon-circle-image": "kaymingmobile/react-native-bacon-circle-image#master",
     "react-native-bacon-square-image": "kaymingmobile/react-native-bacon-square-image#master",
@@ -30,7 +30,7 @@
     "react-native-billing": "2.4.0",
     "react-native-datepicker": "1.6.0",
     "react-native-deck-swiper": "kaymingmobile/react-native-deck-swiper#master",
-    "react-native-drawer": "2.5.0",
+    "react-native-drawer": "2.3.0",
     "react-native-dropdown-menu": "tsaohucn/react-native-dropdown-menu#bacon",
     "react-native-elements": "0.18.5",
     "react-native-exit-app": "1.0.0",
