--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
     "react-native-animatable": "1.2.4",
-    "react-native-bacon-card": "kaymingmobile/react-native-bacon-card#master",
     "react-native-bacon-badge": "kaymingmobile/react-native-bacon-badge#master",
+    "react-native-bacon-card": "kaymingmobile/react-native-bacon-card#master",
+    "react-native-bacon-circle-cache-image": "kaymingmobile/react-native-bacon-circle-cache-image#master",
     "react-native-bacon-circle-image": "kaymingmobile/react-native-bacon-circle-image#master",
     "react-native-bacon-square-image": "kaymingmobile/react-native-bacon-square-image#master",
-    "react-native-bacon-circle-cache-image": "kaymingmobile/react-native-bacon-circle-cache-image#master",
     "react-native-billing": "2.4.0",
     "react-native-datepicker": "1.6.0",
     "react-native-deck-swiper": "kaymingmobile/react-native-deck-swiper#master",
@@ -45,6 +45,7 @@
     "react-native-image-picker": "0.26.7",
     "react-native-image-resizer": "1.0.0",
     "react-native-in-app-utils": "6.0.0",
+    "react-native-indicators": "^0.10.0",
     "react-native-linear-gradient": "2.3.0",
     "react-native-looped-carousel": "kaymingmobile/react-native-looped-carousel#master",
     "react-native-mobx": "0.3.1",
