--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fcm')
     compile project(':react-native-vector-icons')
     compile project(':react-native-orientation-locker')
     compile project(':react-native-fs')
