--- a/ios/Bacon/GoogleService-Info.plist
+++ b/ios/Bacon/GoogleService-Info.plist
@@ -7,34 +7,34 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>371060154058-hhtdj22vv5bg1h6d831d37pp7gjr1ejq.apps.googleusercontent.com</string>
+	<string>725652377518-pt96soh4502k6uljetdh2653vke3kies.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.371060154058-hhtdj22vv5bg1h6d831d37pp7gjr1ejq</string>
+	<string>com.googleusercontent.apps.725652377518-pt96soh4502k6uljetdh2653vke3kies</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD2OpffOMMd2Q6R08149stRAA-LZ1Pfp9E</string>
+	<string>AIzaSyBm9fcnGrmdAZo26_PJH5ieA0paXpLpYHY</string>
 	<key>GCM_SENDER_ID</key>
-	<string>371060154058</string>
+	<string>725652377518</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.kayming.ios.bacon</string>
+	<string>com.kayming.ios.app</string>
 	<key>PROJECT_ID</key>
-	<string>bacon-tsao</string>
+	<string>kjyl-150415</string>
 	<key>STORAGE_BUCKET</key>
-	<string>bacon-tsao.appspot.com</string>
+	<string>kjyl-150415.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:371060154058:ios:6b323357a5cff2bc</string>
+	<string>1:725652377518:ios:ace9a038a508fcdd</string>
 	<key>DATABASE_URL</key>
-	<string>https://bacon-tsao.firebaseio.com</string>
+	<string>https://kjyl-150415.firebaseio.com</string>
 </dict>
 </plist>
